Cycling and selected items updated in inventory