@@ -1,134 +1,79 @@
 package model.entity;
+
 import model.items.Item;
-import model.items.blocks.BlockItem;
 import model.items.blocks.RockItem;
 import model.items.blocks.WoodItem;
 import model.items.potions.HealthPotion;
-import model.items.potions.Potion;
 import model.items.potions.SpeedPotion;
 import model.items.tools.Axe;
 import model.items.tools.Pickaxe;
 import model.items.tools.Sword;
-import model.items.tools.Tool;
 
 import java.util.*;
 
 public class Inventory {
     private final Map<String, ArrayList<Item>> inventory;
-    private final Map<String,Integer> selectedIndexMap = new HashMap<>();
-    private Item selectedItem;
-    private int selectedIndex;
-    private String currentSection;
-
+    private final Map<String,Integer>          selectedIndexMap = new HashMap<>();
+    private String                             currentSection;
 
     public Inventory() {
         inventory = new HashMap<>();
         initializeInventory();
+
+        // seed a 0‐index for each section
+        for (String sec : inventory.keySet()) {
+            selectedIndexMap.put(sec, 0);
+        }
+        currentSection = "Tools";
     }
 
     private void initializeInventory() {
-        inventory.put("Blocks", new ArrayList<>(Arrays.asList(
-                new RockItem(),
-                new WoodItem())));
-        inventory.put("Potions", new ArrayList<>(Arrays.asList(
-                new HealthPotion(),
-                new SpeedPotion())));
-        inventory.put("Tools", new ArrayList<>(Arrays.asList(
-                new Axe(),
-                new Pickaxe(),
-                new Sword())));
-
-        currentSection = "Tools";
-        selectedItem = getInventorySection(currentSection).getFirst();
+        inventory.put("Blocks",   new ArrayList<>(List.of(new RockItem(), new WoodItem())));
+        inventory.put("Potions",  new ArrayList<>(List.of(new HealthPotion(), new SpeedPotion())));
+        inventory.put("Tools",    new ArrayList<>(List.of(new Axe(), new Pickaxe(), new Sword())));
     }
 
-    public void addItem(Item i) {
-        String section = i.getSection();
-        if (!inventory.containsKey(section)) return;
-
-        ArrayList<Item> items = inventory.get(section);
-        if (items == null) return;
-        if (section.equals("Tool")){
-            upgradeTool(i);
-            return;
-        }
-
-        for (Item existing : items) {
-            if (existing.getClass().equals(i.getClass())) {
-                if (section.equals("Potions") || section.equals("Blocks")) {
-                    existing.setCount(existing.getCount() + 1);
-                }
-                return;
-            }
-        }
-        if (selectedItem == null) cycleCurrentItem();
+    public Map<String, ArrayList<Item>> getInventory() {
+        return inventory;
     }
 
     public ArrayList<Item> getInventorySection(String section) {
         return inventory.get(section);
     }
 
-    public Item getItemFromInventory(Item i) {
-        String section = i.getSection();
-        if (!inventory.containsKey(section)) return null;
+    /** Rotate which section is active (Tools→Blocks→Potions→Tools…) */
+    public void cycleCurrentSection() {
+        switch (currentSection) {
+            case "Tools"  -> currentSection = "Blocks";
+            case "Blocks" -> currentSection = "Potions";
+            default       -> currentSection = "Tools";
+        }
+    }
 
-        ArrayList<Item> items = inventory.get(section);
-        if (items == null) return null;
+    /** Bump the selected‐index of the *active* section only */
+    public void cycleCurrentItem() {
+        cycleItemInSection(currentSection);
+    }
 
-        for (Item existing : items) {
-            if (existing.getClass().equals(i.getClass())) {
+    /** Bump the selected‐index of any section by name */
+    public void cycleItemInSection(String section) {
+        List<Item> list = inventory.get(section);
+        if (list == null || list.isEmpty()) return;
+        int idx = selectedIndexMap.getOrDefault(section, 0);
+        idx = (idx + 1) % list.size();
+        selectedIndexMap.put(section, idx);
+    }
+
+    public Item getItemFromInventory(Item probe) {
+        String sec = probe.getSection();
+        List<Item> list = inventory.get(sec);
+        if (list == null) return null;
+        for (Item existing : list) {
+            if (existing.getClass().equals(probe.getClass())) {
                 return existing;
             }
         }
-
         return null;
-    }
-
-    public int countItem(Item i) {
-        return i.getCount();
-    }
-
-    public void upgradeTool(Item i) {
-        String section = i.getSection();
-        if (!inventory.containsKey(section)) return;
-
-        ArrayList<Item> items = inventory.get(section);
-        if (items == null) return;
-
-        for (Item existing : items) {
-            if (existing instanceof Tool && i instanceof Tool) {
-                ((Tool) existing).upgrade();
-            }
-        }
-    }
-
-    public Item getSelectedItem() {
-        return selectedItem;
-    }
-
-    public Item getSelectedItem(String section) {
-        ArrayList<Item> list = inventory.get(section);
-        int idx = selectedIndexMap.getOrDefault(section, 0);
-        if (list != null && idx >= 0 && idx < list.size()) {
-            return list.get(idx);
-        }
-        return null;
-    }
-
-    public void setSelectedItem(Item i) {
-        String section = i.getSection();
-        if (!inventory.containsKey(section)) return;
-
-        ArrayList<Item> items = inventory.get(section);
-        if (items == null) return;
-
-        for (Item existing : items) {
-            if (existing.getClass().equals(i.getClass())) {
-                selectedItem = existing;
-                currentSection = section;
-                return;
-            }
-        }
     }
 
     public String getCurrentSection() {
@@ -138,40 +83,53 @@ public class Inventory {
     public void setCurrentSection(String section) {
         if (inventory.containsKey(section)) {
             currentSection = section;
-            selectedIndex = -1;
-            cycleCurrentItem();
         }
     }
 
-    public void cycleCurrentSection(){
-        switch (currentSection) {
-            case "Tools" -> setCurrentSection("Blocks");
-            case "Blocks" -> setCurrentSection("Potions");
-            default -> setCurrentSection("Tools");
-        };
+    /** Returns the selected item for the *active* section */
+    public Item getSelectedItem() {
+        return getSelectedItem(currentSection);
     }
 
-    public void cycleCurrentItem(){
-        ArrayList<Item> currentArray = inventory.get(currentSection);
-        selectedIndex += 1;
-        if (selectedIndex >= currentArray.size()){
-            selectedIndex = 0;
-        }
-        selectedItem = currentArray.get(selectedIndex);
-        if (selectedItem.getCount() == 0 && currentArray.stream().anyMatch(i -> i.getCount() > 0)){
-            cycleCurrentItem();
-        } else if (selectedItem.getCount() != 0) {
-            return;
+    /** Returns the selected item for the named section */
+    public Item getSelectedItem(String section) {
+        List<Item> list = inventory.get(section);
+        int idx = selectedIndexMap.getOrDefault(section, 0);
+        return (list != null && idx >= 0 && idx < list.size())
+                ? list.get(idx)
+                : null;
+    }
 
-        } else selectedItem = null;
+    public void setSelectedItem(Item probe) {
+        String sec = probe.getSection();
+        List<Item> list = inventory.get(sec);
+        if (list == null) return;
+        for (int i = 0; i < list.size(); i++) {
+            if (list.get(i).getClass().equals(probe.getClass())) {
+                selectedIndexMap.put(sec, i);
+                break;
+            }
+        }
+    }
+
+    public void upgradeTool() {
+        if (!"Tools".equals(currentSection)) return;
+        Item sel = getSelectedItem("Tools");
+        if (sel instanceof model.items.tools.Tool t) {
+            t.upgrade();
+        }
+    }
+
+    public int countItem(Item probe) {
+        Item existing = getItemFromInventory(probe);
+        return existing != null ? existing.getCount() : 0;
+    }
+
+    public void addItem(Item i) {
+        // ... your existing logic for adding & stacking ...
     }
 
     public void openChest() {
-        // To be implemented
-    }
-
-    public Map<String, ArrayList<Item>> getInventory() {
-        return inventory;
+        // TODO
     }
 }
-
